--- a/elevate/crm/templates/crm/index.html
+++ b/elevate/crm/templates/crm/index.html
@@ -8,6 +8,16 @@
         <h3> Homepage! </h3>
         <p> Welcome to my website! </p>
 
+        {%for client in mainClientList%}
+            {{client.id}}
+            <br>
+            {{client.name}}
+            <br>
+            {{client.occupation}}
+            <br>
+
+        {%endfor%}
+
     {% endblock %}
     
 </html>
